THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.

PL-node-v0.13.0
- FIX: Cleanup an old file and an incorrect entry in the .gitignore file
- CHG: Change order of pattern addition and ~variant pattern addition so they build naturally in the menu.
- THX: Thanks @e2tha-e for the flurry of pull requests!
- CHG: Update data merge function to prioritize handle pattern~variant.json files
- THX: Thanks @e2tha-e for finding, fixing, and unit testing the data merge issue.
- ADD: Support for recursive partial inclusion
- THX: Thanks @e2tha-e for making pattern inclusion a lot more robust. Great work!!!
- FIX: Improvements to style guide menu generation and capitalization.

PL-node-v0.12.0
 - ADD: Gulp support arrives with an optional configuration
 - ADD: Instructions how to install and run with Gulp
 - DEL: Deleted the sass modules from `package.json` files
 - CHG: Commented out all sass tasks in Grunt and Gulp files
 - CHG: Changed static web server provider to BrowserSync
 - CHG: Replaced the Style Guide toolbar Auto-Reload and Page Follow with a link to the BrowserSync UI
 - THX: Thanks @oscar-g for the initial work on the gulpfile!
 - ADD: An alternative, more verbose syntax for pattern partial inclusion
 - THX: Thanks @e2tha-e for the thoughtful addition with unit test coverage

PL-node-v0.11.0
 - ADD: Ignore pattern directories that start with an underscore.
 - ADD: Support for lists with the listItems variable
 - FIX: Resolved issue where pattern parameter data bled into global data object
 - ADD: Support a fluid viewport

PL-node-v0.10.1
 - ADD: Added more unit tests for recently more-modular code
 - FIX: Lineage was not working for patterns with pattern parameters

PL-node-v0.10.0
 - ADD: Added support for pattern parameters! Resolves #88
 - FIX: Data inheritance is now working as advertised. Resolves #127. This turned out to be a MAJOR thing, as I realized the home-page was not passing down any of its json data to partials.